Editors/Zed/TreeSitter/grammar.js
    source_file: ($) =>
      repeat(
        choice(
          $.import_declaration,
          $.use_declaration,
          $.structure_definition,
          $.function_definition,
          $.native_function_declaration,
          $.public_declaration,
        ),
      ),

    structure_definition: ($) =>
      seq(
        choice("struct", "class"),
        field("name", $.identifier),
        optional(seq(":", field("base", $.named_type))),
        "{",
        repeat(
          choice(
            seq(optional(field("visibility", choice("pub", "sub"))), $.structure_field),
            seq(optional(field("visibility", choice("pub", "sub"))), $.constructor_definition),
            seq(
              optional(field("override", "override")),
              optional(field("visibility", choice("pub", "sub"))),
              $.function_definition,
            ),
          ),
        ),
        "}",
      ),

    structure_field: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("type", $.type),
        optional(seq("=", field("default", $.expression))),
        choice(";", $._automatic_semicolon),
      ),

    function_definition: ($) =>
      seq(
        "func",
        field("name", $.identifier),
        $.parameter_list,
        optional(field("return_type", choice($.void_type, $.type))),
        field("body", $.block),
      ),

    builtin_type: (_) =>
      choice(
        "int",
        "int8",
        "int16",
        "int32",
        "int64",
        "uint",
        "uint8",
        "uint16",
        "uint32",
        "uint64",
        "float",
        "float32",
        "float64",
        "bool",
        "str",
      ),
    named_type: ($) => alias(choice($.identifier, $.qualified_name), $.type_identifier),
    function_type: ($) =>
      seq(
        "func",
        "(",
        optional(seq($.function_type_parameter, repeat(seq(",", $.function_type_parameter)))),
        ")",
        optional(choice($.void_type, $.type)),
      ),
    function_type_parameter: ($) =>
      seq(optional(field("mutable_reference", "&")), field("type", $.type)),
    grouped_type: ($) => seq("(", field("type", $.type), ")"),
    optional_type: ($) =>
      prec.left(
        seq(
          field(
            "contained",
            choice($.builtin_type, $.named_type, $.function_type, $.grouped_type, $.array_type),
          ),
          "?",
        ),
      ),
    array_type: ($) =>
      prec.left(
        seq(
          field("element", choice($.builtin_type, $.named_type, $.function_type, $.grouped_type, $.optional_type)),
          repeat1(choice(seq("[", "]"), seq("[", field("length", $.integer_literal), "]"))),
        ),
      ),
    type: ($) => choice($.optional_type, $.array_type, $.grouped_type, $.function_type, $.builtin_type, $.named_type),
    parameter_list: ($) =>
      seq("(", optional(seq($.parameter, repeat(seq(",", $.parameter)))), ")"),

    parameter: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        optional(field("mutable_reference", "&")),
        field("type", $.type),
      ),

    block: ($) => seq("{", repeat($.statement), "}"),

    statement: ($) =>
      choice(
        seq(
          choice(
            $.variable_declaration,
            $.assignment_statement,
            $.update_statement,
            $.print_statement,
            $.assert_statement,
            $.panic_statement,
            $.return_statement,
            $.break_statement,
            $.continue_statement,
            $.expression_statement,
          ),
          choice(";", $._automatic_semicolon),
        ),
        $.if_statement,
        $.while_statement,
        $.for_statement,
      ),

    variable_declaration: ($) =>
      seq(
        field("mutability", choice("let", "var")),
        field("name", $.identifier),
        choice(
          seq($.type_annotation, optional(seq("=", field("initializer", $.expression)))),
          seq("=", field("initializer", $.expression)),
        ),
      ),

    type_annotation: ($) => seq(":", field("type", $.type)),

    assignment_statement: ($) =>
      seq(
        field("left", choice($.identifier, $.member_expression, $.index_expression)),
        field("operator", choice("=", "+=", "-=", "*=", "/=")),
        field("right", $.expression),
      ),

    update_statement: ($) =>
      seq(
        field("argument", choice($.identifier, $.member_expression, $.index_expression)),
        field("operator", choice("++", "--")),
      ),

    print_statement: ($) =>
      seq(
        field("function", alias("print", $.identifier)),
        "(",
        field("argument", $.expression),
        ")",
      ),

    assert_statement: ($) =>
      seq(
        field("function", alias("assert", $.identifier)),
        "(",
        field("condition", $.expression),
        ",",
        field("message", $.expression),
        ")",
      ),

    panic_statement: ($) =>
      seq(
        field("function", alias("panic", $.identifier)),
        "(",
        field("message", $.expression),
        ")",
      ),

    return_statement: ($) => seq("return", optional(field("value", $.expression))),

    expression_statement: ($) =>
      choice(
        $.invocation_expression,
        $.super_method_expression,
        $.safe_member_expression,
        $.cascade_expression,
      ),

    if_statement: ($) =>
      seq(
        "if",
        field("condition", $._condition_header),
        field("body", $.block),
        repeat(field("branch", $.alternative_branch)),
        optional(seq("else", field("alternative", $.block))),
      ),

    alternative_branch: ($) =>
      choice(
        seq(
          "elif",
          field("condition", $._condition_header),
          field("body", $.block),
        ),
        seq(
          "else",
          "if",
          field("condition", $._condition_header),
          field("body", $.block),
        ),
      ),

    while_statement: ($) =>
      seq(
        "while",
        field("condition", $._condition_header),
        field("body", $.block),
      ),

    _condition_header: ($) =>
      choice($.expression, $.conditional_binding, seq("(", $.conditional_binding, ")")),

    conditional_binding: ($) =>
      seq(
        optional(field("mutability", choice("let", "var"))),
        field("name", $.identifier),
        "=",
        field("source", $.expression),
      ),

    expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.borrow_expression,
        $.conversion_expression,
        $.lambda_expression,
        $.invocation_expression,
        $.super_method_expression,
        $.cascade_expression,
        $.sequence_literal,
        $.member_expression,
        $.safe_member_expression,
        $.index_expression,
        $.slice_expression,
        $.parenthesized_expression,
        $.string_literal,
        $.float_literal,
        $.integer_literal,
        $.boolean_literal,
        $.null_literal,
        $.self_expression,
        $.identifier,
      ),

    sequence_literal: ($) =>
      seq("[", optional(seq($.expression, repeat(seq(",", $.expression)), optional(","))), "]"),

    field_initializer: ($) =>
      seq(field("name", $.identifier), ":", field("value", $.expression)),

    member_expression: ($) =>
      prec.left(
        PREC.member,
        seq(
          field(
            "object",
            choice(
              $.identifier,
              $.self_expression,
              $.invocation_expression,
              $.member_expression,
              $.safe_member_expression,
              $.index_expression,
              $.slice_expression,
              $.sequence_literal,
              $.string_literal,
              $.float_literal,
              $.integer_literal,
              $.boolean_literal,
              $.parenthesized_expression,
            ),
          ),
          ".",
          field("field", $.identifier),
        ),
      ),

    safe_member_expression: ($) =>
      prec.left(
        PREC.member,
        seq(
          field(
            "object",
            choice(
              $.identifier,
              $.self_expression,
              $.invocation_expression,
              $.member_expression,
              $.safe_member_expression,
              $.index_expression,
              $.slice_expression,
              $.sequence_literal,
              $.string_literal,
              $.float_literal,
              $.integer_literal,
              $.boolean_literal,
              $.null_literal,
              $.parenthesized_expression,
            ),
          ),
          "?.",
          field("field", $.identifier),
        ),
      ),

    invocation_expression: ($) =>
      seq(
        field(
          "target",
          choice(
            $.identifier,
            $.qualified_name,
            $.parenthesized_expression,
            $.lambda_expression,
            $.member_expression,
            $.safe_member_expression,
            $.index_expression,
          ),
        ),
        "(",
        optional(
          choice(
            seq($.expression, repeat(seq(",", $.expression))),
            seq($.field_initializer, repeat(seq(",", $.field_initializer)), optional(",")),
          ),
        ),
        ")",
      ),

    index_expression: ($) =>
      prec.left(
        PREC.member,
        seq(
          field(
            "object",
            choice(
              $.identifier,
              $.self_expression,
              $.invocation_expression,
              $.member_expression,
              $.index_expression,
              $.slice_expression,
              $.sequence_literal,
              $.string_literal,
              $.float_literal,
              $.integer_literal,
              $.boolean_literal,
              $.parenthesized_expression,
            ),
          ),
          "[",
          field("index", $.expression),
          "]",
        ),
      ),

    binary_expression: ($) =>
      choice(
        prec.left(
          PREC.logicalOr,
          seq(
            field("left", $.expression),
            field("operator", "||"),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.logicalAnd,
          seq(
            field("left", $.expression),
            field("operator", "&&"),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.equality,
          seq(
            field("left", $.expression),
            field("operator", choice("==", "!=")),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.comparison,
          seq(
            field("left", $.expression),
            field("operator", choice("<", "<=", ">", ">=")),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.bitXor,
          seq(
            field("left", $.expression),
            field("operator", "^"),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.bitAnd,
          seq(
            field("left", $.expression),
            field("operator", "&"),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.shift,
          seq(
            field("left", $.expression),
            field("operator", choice("<<", ">>")),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.additive,
          seq(
            field("left", $.expression),
            field("operator", choice("+", "-")),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.multiplicative,
          seq(
            field("left", $.expression),
            field("operator", choice("*", "/", "%")),
            field("right", $.expression),
          ),
        ),
      ),

    unary_expression: ($) =>
      prec(PREC.unary, seq(field("operator", choice("!", "-")), field("operand", $.expression))),

    conversion_expression: ($) =>
      prec.left(
        PREC.conversion,
        seq(field("value", $.expression), "as", field("type", $.type)),
      ),

    parenthesized_expression: ($) => seq("(", $.expression, ")"),

    string_literal: ($) =>
      seq('"', repeat(choice($.escape_sequence, /[^"\\\n\r]+/)), '"'),

    integer_literal: (_) =>
      choice(
        /0[bB][01](?:_?[01])*/,
        /0[oO][0-7](?:_?[0-7])*/,
        /0[xX][0-9a-fA-F](?:_?[0-9a-fA-F])*/,
        /\d(?:_?\d)*/,
      ),
    float_literal: (_) =>
      choice(
        /\d(?:_?\d)*\.\d(?:_?\d)*(?:[eE][+-]?\d(?:_?\d)*)?/,
        /\d(?:_?\d)*[eE][+-]?\d(?:_?\d)*/,
      ),
    boolean_literal: (_) => choice("true", "false"),
    null_literal: (_) => "null",
    self_expression: (_) => "self",
    identifier: (_) => /[A-Za-z_][A-Za-z0-9_]*/,
    comment: (_) => token(seq("//", /[^\n]*/)),
  },
});
